--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_629328_w670jbyzf6j62yb9.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no,viewport-fit=cover">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_629328_3pvdyisbpsy5vcxr.css">
     <link rel="stylesheet" href="./static/css/reset.css">
     <title>e-shop</title>
   </head>
