--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no,viewport-fit=cover">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_629328_3pvdyisbpsy5vcxr.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_629328_ab1r79jw7vptx1or.css">
     <link rel="stylesheet" href="./static/css/reset.css">
     <title>e-shop</title>
   </head>
